# DietMicrobeNet

./: CITATION.cff  README.md  Snakefile  pyproject.toml  run_workflow.py  versions.json
.github/workflows/: unit_testing.yml
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/CHANGELOG/: index.html
2.0.0/installation/: index.html
2.0.0/intersample_comp/: index.html
2.0.0/output/: index.html
2.0.0/quickstart/: index.html
2.0.0/search/: search_index.json
2.0.0/usage/: index.html
docs-site/docs/: CHANGELOG.md  index.md  installation.md  intersample_comp.md  output.md  quickstart.md  usage.md
src/: get_foods.py
src/dietmicrobe/: CompoundAnalysis_FooDB.Rmd  GraphComparison.py  GraphResults_Report.Rmd  RenderCompoundAnalysis.py  RenderGraphResults_Report.py  comp_FoodDB.R  foodb_nodes_edges.py  main_dm.py  run_graph.py
src/dietmicrobehost/: HostGraphResults_Report.Rmd  RenderHostGraphResults_Report.py  host_GraphComparison.py  host_nodes_edges.py  host_run_graph.py  main_host.py
src/tests/: test_DMGraphComparison.py  test_DietMicrobe.py  test_Host.py  test_HostGraphComparison.py
