[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dietmicrobenet"
license = {text = "MIT"}
version = "2.0.0"
authors = [
    {name = "Angela Sofia Burkhart Colorado", email = "angelasofia.burkhartcolorado@cuanschutz.edu"},
    {name = "Catherine Lozupone", email = "catherine.lozupone@cuanschutz.edu"}
]
readme = "README.md"
requires-python= ">=3.9"

dependencies = [
    "streamlit",
    "requests"
]

[project.urls]
Homepage = "https://lozuponelab.github.io/DietMicrobeNet/latest/"


